# batteries-included

./: .gitignore  LICENSE  README.md  example.ipynb  example.py  main.py  pyproject.toml
src/: model.py  optimization.py  visualization.py
src/batteries_included/: model.py  optimization.py  visualization.py
src/batteries_included/model/: common.py  optimization.py  perfect_foresight.py  price_uncertainty.py
src/batteries_included/model/tests/: test_common.py  test_compatibility.py  test_optimization.py  test_perfect_foresight.py  test_price_uncertainty.py
src/batteries_included/tests/: test_model.py  test_optimization.py
tests/: test_main.py  test_model.py  test_optimization.py
