[project]
name = "batteries-included"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "highspy>=1.11.0",
    "linopy>=0.5.5",
    "plotext>=5.3.2",
]


[project.optional-dependencies]
dev = ["pytest"]

[tool.pytest.ini_options]
pythonpath = ["src"]
