[project]
name = "batteries-included"
version = "v0.1.1-alpha"
description = "A lightweight Python package that calculates the optimal battery dispatch based on an exogenous price profile."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "highspy>=1.11.0",
 "linopy>=0.5.5",
]


[project.optional-dependencies]
dev = [
    "ipykernel>=6.30.0",
    "matplotlib>=3.10.5",
    "nbformat>=5.10.4",
    "plotly>=6.2.0",
    "pytest",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
